--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 mediacloud==3.7.5
 newsapi-python==0.2.6
-beautifulsoup4==4.8.2
 warcio==1.7.2
 goose3==3.1.6
 tqdm==4.41.1
 aiohttp==3.6.2
+python-dotenv==0.10.3
